# engineai_pm01_mujoco_sim2sim

./: README.md
minic_mujoco/: CMakeLists.txt  package.xml  pm01_controller_mujoco.cpp  pm01_controller_mujoco.hpp
mujoco_simulation/mujoco/launch/: mujoco_simulator.launch.py
pm01_deploy/: CMakeLists.txt
pm01_deploy/config/minic_motion_data/: cmu_5_8.npz  cmu_5_8_50hz.csv  fly.npz
pm01_deploy/config/param/: pm01_mujoco_base_direct.yaml  pm01_mujoco_base_manager.yaml  pm01_mujoco_minic_cpp.yaml  pm01_mujoco_minic_python.yaml  pm01_real_minic.yaml
pm01_deploy/config/policy/base_walking/: dirct_env.pt
pm01_deploy/config/policy/minic/: cmu_5_8.onnx  cmu_5_8.pt  dance1_subject1.onnx  fly.pt  walk.onnx  walk.pt
pm01_deploy/script/: deploy_mujoco_amp.py  deploy_mujoco_base.py  deploy_mujoco_base_gamepad.py  deploy_mujoco_minic.py
pm01_deploy/src/: motion_loader.hpp  pm01_controller_rl_walking.cpp  pm01_controller_rl_walking.hpp  pm01_minic_deploy.cpp  pm01_minic_deploy.hpp
pm01_deploy/src/components/: message_handler.hpp
src/: README.md
src/motion/: sharkHand.csv  test.py
src/pm01_deploy/config/param/: pm01_mujoco.yaml  pm01_mujoco_base_direct.yaml  pm01_mujoco_base_manager.yaml  pm01_mujoco_minic.yaml  pm01_real_base_manager.yaml  pm01_real_direct_env.yaml  test.yaml
src/pm01_deploy/config/policy/base_walking/: dirct_env.onnx  dirct_env.pt  manager_base_env.pt
src/pm01_deploy/config/policy/minic/: dan1_sub1.pt
src/pm01_deploy/script/: deploy_mujoco_base_direct.py  deploy_mujoco_gamepad.py  deploy_mujoco_minic.py  gamepad_publisher.py  joy_control.py
src/pm01_deploy/src/: pm01_controller.cpp  pm01_controller.hpp  pm01_utils.hpp
src/pm01_deploy/src/backup/: pm01_controller copy66.cpp  pm01_controller413-2.cpp  pm01_controller413_1.cpp
src/pm01_deploy/src/components/: message_handler.cc
